I did a thing. It's not ready yet but it's a thing

--- a/client/src/components/pages/Homepage.css
+++ b/client/src/components/pages/Homepage.css
@@ -1,1 +1,7 @@
 /* Fill me in :) */
+.Homepage-body {
+    text-align: center;
+    align-self: center;
+    margin: 0 auto;
+    font-size: large;
+}
