--- a/client/src/components/pages/Resources.css
+++ b/client/src/components/pages/Resources.css
@@ -9,14 +9,14 @@
     padding-top: 2em;
 }
 
-.Resource-tab {
+.Resources-tab {
     text-align: center;
     margin: auto auto;
     width: 50vw;
     padding-bottom: 2em;
 }
 
-.Resource-tab-title {
+.Resources-tab-title {
     padding-bottom: 2em;
     padding-top: 2em;
 }
