--- a/client/src/components/pages/ProfileEdit.css
+++ b/client/src/components/pages/ProfileEdit.css
@@ -1,3 +1,13 @@
 img {
     width: 180px;
 }
+
+.ProfileEdit-form {
+    max-width: 50vw;
+    margin: auto auto;
+}
+
+.ProfileEdit-form-image {
+    text-align: center;
+    margin: auto auto;
+}
