--- a/client/src/components/pages/ProfileEdit.css
+++ b/client/src/components/pages/ProfileEdit.css
@@ -7,7 +7,7 @@ img {
     margin: auto auto;
 }
 
-.ProfileEdit-form-image {
+.ProfileEdit-form-center {
     text-align: center;
     margin: auto auto;
 }
