--- a/client/src/components/pages/Homepage.css
+++ b/client/src/components/pages/Homepage.css
@@ -102,3 +102,37 @@ a.dark-a:hover{
   border-color: #fff;
   border-width: 3px;
 }
+
+a.btn-primary{
+  border-color: #F2BE32;
+  color: #222;
+  background-color: #F2BE32;
+  padding: 20px 40px;
+  margin-top: 20px;
+  margin-right: 40px;
+  margin-left: 40px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  font-family: 'Muli', sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+a.btn-primary:hover{
+  border-color: #F2BE32;
+  color: #000;
+  font-weight: 800;
+  background-color: transparent;
+  border-width: medium;
+}
+
+.MuiTypography-h4{
+  font-family: 'Muli', sans-serif !important;
+  font-weight: 500 !important;
+  color: #000;
+  padding: 70px 10px 50px 10px;
+}
+
+.table{
+  font-size: 1.2rem !important;
+}
