--- a/client/src/components/pages/Homepage.css
+++ b/client/src/components/pages/Homepage.css
@@ -191,3 +191,34 @@ a.btn-primary:hover{
 .card-header:hover{
     font-weight: 800 !important;
 }
+
+.resourcetitle{
+    font-size: 25px;
+    padding: 30px 20px 10px 20px;
+    margin: 5px;
+    text-overflow: " ";
+    align-content: center;
+}
+
+.resourcetag{
+  background-color: #dedede;
+  color: #555;
+	padding: 5px 10px;
+	margin: 5px;
+	border-radius: 4px;
+}
+
+.resourcesdesc{
+  text-align: left;
+  padding-left: 40px;
+}
+
+.rlist{
+  padding: 0px 20px 0px 20px;
+}
+
+.rlistitem{
+  border-width: 2px;
+  border-color: #000;
+  padding: 40px;
+}
