--- a/client/src/components/pages/Homepage.css
+++ b/client/src/components/pages/Homepage.css
@@ -193,7 +193,7 @@ a.btn-primary:hover{
 }
 
 .resourcetitle{
-    font-size: 25px;
+    font-size: 2rem;
     padding: 30px 20px 10px 20px;
     margin: 5px;
     text-overflow: " ";
@@ -202,7 +202,7 @@ a.btn-primary:hover{
 
 .resourcetag{
   background-color: #dedede;
-  color: #555;
+  color: #000;
 	padding: 5px 10px;
 	margin: 5px;
 	border-radius: 4px;
@@ -210,15 +210,35 @@ a.btn-primary:hover{
 
 .resourcesdesc{
   text-align: left;
-  padding-left: 40px;
+  padding: 20px 0px 20px 40px;
 }
 
 .rlist{
   padding: 0px 20px 0px 20px;
+  font-size: 1.2rem;
+  font-weight: 300 !important;
+  color: #000 !important;
 }
 
 .rlistitem{
-  border-width: 2px;
-  border-color: #000;
-  padding: 40px;
+  border-width: 2px !important;
+  border-color: #000 !important;
+  padding: 10px;
+}
+
+.rlist:hover{
+  color: #000;
+  font-weight: 500 !important;
+}
+
+.MuiPaper-outlined{
+  border: 1px solid rgba(0,0,0,0.5) !important;
+}
+
+.MuiPaper-outlined:hover{
+  border: 3px solid rgba(242, 190, 50,1) !important;
+}
+
+.filters{
+  padding: 0px 20px 0px 50px !important;
 }
