--- a/server/templates/match.html
+++ b/server/templates/match.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>CovED Match!</title>
+    <title>CovEd Match!</title>
 </head>
 
 <body>
