--- a/client/src/components/pages/Register.css
+++ b/client/src/components/pages/Register.css
@@ -3,10 +3,12 @@ img {
 }
 
 .Register-form {
-    max-width: 50vw;
-    margin: auto auto;
+    flex-grow: 3;
 }
 
+.Register-form .form-control {
+    padding-right: calc(1.5em + .75rem);
+}
 .Register-form-center {
     text-align: center;
     margin: auto auto;
