Made the mentor results into a table

--- a/client/src/components/modules/MentorResultDisplay.css
+++ b/client/src/components/modules/MentorResultDisplay.css
@@ -22,10 +22,14 @@
   font-family: 'Muli', sans-serif !important;
   font-weight: 700 !important;
   text-align: center;
-  padding: 10px 5px 20px 5px;
+  padding: 10px 5px 10px 5px;
 }
 
 .MuiTextField-root	{
   padding: 7px 5px 20px 5px !important;
   text-align: center !important;
+}
+/* Todo */
+.MentorResultDisplayContainer {
+  
 }
