update match template

--- a/server/templates/match.html
+++ b/server/templates/match.html
@@ -4,27 +4,24 @@
 <head>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>CovED Match!</title>
+    <title>[URGENT][Action-Required]CovED Match!</title>
 </head>
 
 <body>
 <p>
 Hello {{mentorfirst}},
-First and foremost, thank you for volunteering to academically support students during this stressful time. We really
-appreciate your passion for helping others. Thank you so much for putting in the time and effort for kids all across the
-United States!
-
+First and foremost, thank you for volunteering to academically support students during this stressful time. We really appreciate your passion for helping others. Thank you so much for putting in the time and effort for kids all across the United States!
 <br/>
-With that said, a student/parent has requested to have you as a mentor - yay! Their information is below.
+<br/>
+With that said, a parent has requested to have you mentor their child - yay! Their information is below.
 <br/>
 <b>Email: {{studentemail}}</b>
 <br />
 <b>Message: {{message}}</b>
 <br />
-If you choose to accept this mentorship pairing, <b> please fill out <a href="https://forms.gle/gVYaeoUuBV5Ahjcr9">this</a> google form within 24 hours so that we know you
-    have paired yourself.</b>
+If you choose to accept this mentorship pairing, <b> please fill out <a href="https://forms.gle/gVYaeoUuBV5Ahjcr9">this</a> google form within 24 hours so that we know you have paired yourself. Also, please contact the email above </b>
     <br />
-    <b>IMPORTANT: </b> If you do intend on mentoring, we first would like for you to read the <a href="https://docs.google.com/document/d/12mTLuFYoSHbLaSAt9dfYmTo2OQIH-tDf5tbRHhAVI5E/edit?usp=sharing">CovEd Mentor Guidelines</a>
+    <b>IMPORTANT: </b> If you do intend on mentoring, we first would like for you to read the <a href="/mentorguidelines">CovEd Mentor Guidelines</a>
     before proceeding. Once read, please confirm that you have read and understood the guidelines and expectations of being
     a mentor by filling out the <a href="https://forms.gle/7PUgtYhxQkPoxi4K6">Mentor Expectations Confirmation</a> form.
     <br/>
