update match template

--- a/server/templates/match.html
+++ b/server/templates/match.html
@@ -19,9 +19,9 @@ With that said, a parent has requested to have you mentor their child - yay! The
 <br />
 <b>Message: {{message}}</b>
 <br />
-If you choose to accept this mentorship pairing, <b> please fill out <a href="https://forms.gle/gVYaeoUuBV5Ahjcr9">this</a> google form within 24 hours so that we know you have paired yourself. Also, please contact the email above </b>
+If you choose to accept this mentorship pairing, <b> please fill out <a href="https://forms.gle/gVYaeoUuBV5Ahjcr9">this</a> google form within 24 hours so that we know you have paired yourself. Also, within 24 hours, please contact the parent/student with the email listed above.</b>
     <br />
-    <b>IMPORTANT: </b> If you do intend on mentoring, we first would like for you to read the <a href="/mentorguidelines">CovEd Mentor Guidelines</a>
+    <b>IMPORTANT: </b> If you do intend on mentoring, we first would like for you to read the <a href="https://coved.herokuapp.com/mentorguidelines">CovEd Mentor Guidelines</a>
     before proceeding. Once read, please confirm that you have read and understood the guidelines and expectations of being
     a mentor by filling out the <a href="https://forms.gle/7PUgtYhxQkPoxi4K6">Mentor Expectations Confirmation</a> form.
     <br/>
@@ -43,8 +43,7 @@ If you choose to accept this mentorship pairing, <b> please fill out <a href="ht
     Thank you again, and we are excited to hear about how the mentorship goes!
     <br/>
     Sadly, we realize that not all signees are able to continue with this mentorship. If this is the case and you choose to
-    opt out, please email us saying that you cannot mentor the student with the subject “Cannot Mentor”. Still, we thank
-    you!
+    opt out, please email the student/parent saying that you cannot mentor the student with the subject “Cannot Mentor”. Still, we thank you! <b> Also, if you wish to hide your profile from the mentor database listing on the website and prevent further mentor requests, please do so by going to your profile page on the website and editing the privacy option.</b>
     <br/>
     Best wishes,
     <br/>
