change mentorguidelines and match template

--- a/server/templates/match.html
+++ b/server/templates/match.html
@@ -10,6 +10,8 @@
 <body>
 <p>
 Hello {{mentorfirst}},
+<br />
+<br />
 First and foremost, thank you for volunteering to academically support students during this stressful time. We really appreciate your passion for helping others. Thank you so much for putting in the time and effort for kids all across the United States!
 <br/>
 <br/>
@@ -20,7 +22,7 @@ With that said, a parent has requested to have you mentor their child - yay! The
 <b>Message: {{message}}</b>
 <br />
 <br />
-If you choose to accept this mentorship pairing, <b> please fill out <a href="https://forms.gle/gVYaeoUuBV5Ahjcr9">this</a> google form within 24 hours so that we know you have paired yourself. Also, within 24 hours, please contact the parent/student with the email listed above.</b>
+If you choose to accept this mentorship pairing, <b> please go to your profile page on the website and edit the privacy option to indicate that you are no longer an available mentor (unless of course, you would like to matched again!). Then, within 24 hours, please contact the parent/student with the email listed above. Finally, fill out <a href="https://forms.gle/gVYaeoUuBV5Ahjcr9">this</a> google form as soon as you have made established contact with your student and know the student's name.</b>
     <br /><br />
     <b>IMPORTANT: </b> If you do intend on mentoring, we first would like for you to read the <a href="https://coved.herokuapp.com/mentorguidelines">CovEd Mentor Guidelines</a>
     before proceeding. Once read, please confirm that you have read and understood the guidelines and expectations of being
@@ -44,7 +46,7 @@ If you choose to accept this mentorship pairing, <b> please fill out <a href="ht
     Thank you again, and we are excited to hear about how the mentorship goes!
     <br/><br />
     Sadly, we realize that not all signees are able to continue with this mentorship. If this is the case and you choose to
-    opt out, please email the student/parent saying that you cannot mentor the student with the subject “Cannot Mentor”. Still, we thank you! <b> Also, if you wish to hide your profile from the mentor database listing on the website and prevent further mentor requests, please do so by going to your profile page on the website and editing the privacy option.</b>
+    opt out, please email the student/parent saying that you cannot mentor the student with the subject “[CovEd] Please Request Another Mentor”. Still, we thank you! <b> Also, if you wish to hide your profile from the mentor database listing on the website and prevent further mentor requests, please do so by going to your profile page on the website and editing the privacy option.</b>
     <br/><br />
     Best wishes,
     <br/>
