update template and subjects

--- a/server/templates/match.html
+++ b/server/templates/match.html
@@ -22,11 +22,10 @@ With that said, a parent has requested to have you mentor their child - yay! The
 <b>Message: {{message}}</b>
 <br />
 <br />
-If you choose to accept this mentorship pairing, <b> please go to your profile page on the website and edit the privacy option to indicate that you are no longer an available mentor (unless of course, you would like to matched again!). Then, within 24 hours, please contact the parent/student with the email listed above. Finally, fill out <a href="https://forms.gle/gVYaeoUuBV5Ahjcr9">this</a> google form as soon as you have made established contact with your student and know the student's name.</b>
+If you choose to accept this mentorship pairing, <b> please go to your profile page on the website and edit the privacy option to indicate that you are no longer an available mentor (unless of course, you would like to matched again!). Then, within 24 hours, please contact the parent/student with the email listed above and bcc <a href="mailto:covedmatches@gmail.com">covedmatches@gmail.com</a>.</b>
     <br /><br />
-    <b>IMPORTANT: </b> If you do intend on mentoring, we first would like for you to read the <a href="https://coved.herokuapp.com/mentorguidelines">CovEd Mentor Guidelines</a>
-    before proceeding. Once read, please confirm that you have read and understood the guidelines and expectations of being
-    a mentor by filling out the <a href="https://forms.gle/7WUbRxATfJn8AUMM8">Mentor Expectations Confirmation</a> form.
+    <b>IMPORTANT: </b> If you decide to mentor, you are agreeing to follow the Mentor Guidelines. So, if you do intend on mentoring, we first would like for you to read the <a href="https://coved.herokuapp.com/mentorguidelines">CovEd Mentor Guidelines</a>
+    before proceeding.
     <br/><br />
     Remember to cc the parent email on every email you send, as explained in the mentor guidelines. We recommend that you
     start with a 30 minute session to introduce yourselves and decide how the mentorship will proceed, including:
