put FAQs in sections

--- a/client/src/components/pages/Homepage.css
+++ b/client/src/components/pages/Homepage.css
@@ -236,3 +236,24 @@ a.btn-primary:hover{
 .filters{
   padding: 0 20px 0 50px !important;
 }
+
+.MuiExpansionPanel-root{
+  border: 1px solid rgba(255, 255, 255, .125) !important;
+  box-shadow: none !important;
+  border-bottom: none !important;
+}
+
+.MuiExpansionPanel-root::before{
+  display: none !important;
+}
+
+.MuiExpansionPanel-root .Mui-expanded{
+  margin: auto !important;
+}
+
+.MuiExpansionPanelSummary-root{
+  background-color: rgba(48, 49, 51, .05) !important;
+  margin: 10px 0px 10px 0px !important;
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+}
