--- a/server/templates/match.html
+++ b/server/templates/match.html
@@ -17,6 +17,8 @@ First and foremost, thank you for volunteering to academically support students 
 <br/>
 With that said, a parent has requested to have you mentor their child - yay! Their information is below.
 <br/>
+<b>Name: {{studentname}}</b>
+<br/>
 <b>Email: {{studentemail}}</b>
 <br />
 <b>Message: {{message}}</b>
