--- a/client/src/components/pages/SpeakerSeries.css
+++ b/client/src/components/pages/SpeakerSeries.css
@@ -56,3 +56,16 @@ a.dark-a:hover{
   padding-top: 10px !important;
   padding-bottom: 10px !important;
 }
+
+iframe.panel{
+  width: 620px !important;
+  height: 480px !important;
+}
+
+
+@media only screen and (max-width: 768px){
+  iframe.panel{
+    width: 80% !important;
+    height: auto !important;
+  }
+}
