cleaned up mentor request template

--- a/server/templates/verification.html
+++ b/server/templates/verification.html
@@ -9,14 +9,16 @@
 
 <body>
     <p>
-        Hello {{guardianName}},
+        Hello,
+        <br/>
         <br/>
         The mentor you requested help from has been notified and will be in contact with you shortly.
         If you don't hear a response within 48 hours, please request another mentor.
         <br />
+        <br/>
         Best wishes,
         <br />
-        CovEd Management
+        The CovEd Team
     </p>
 </body>
 
