--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -1,19 +1,64 @@
+.navbar > .container {
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .navbar-light .navbar-brand{
-  color: #00568C !important;
-  font-weight: 800;
-  font-family: 'Muli', sans-serif !important;
+  color: #0F3C61 !important;
+  font-weight: bold;
+  font-family: 'Aspira', sans-serif !important;
+  font-size: 24px;
+  line-height: 29px;
 }
 
 .navbar{
-  background-color:transparent ;
+  background-color: transparent ;
+  /* float: left; */
+  justify-content: flex-start;
+  border-radius: 10px;
+  border-color: black;
+  border-width: 2px;
 }
 
 .nav-link{
-  font-weight: 600;
-  font-family: 'Muli', sans-serif !important;
-  color: #00568C !important;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  font-family: 'Aspira', sans-serif !important;
+  color: #0F3C61 !important;
 }
 
 .nav-link:hover{
   color: #F2BE32 !important;
+}
+
+.dropdown {
+  margin: 0;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.dropdown-menu {
+  max-width: 50px;
+  font-size: 18px;
+  line-height: 22px;
+  padding-right: 5px;
+}
+
+.btn-nav {
+  color: #FFFFFF !important;
+  background-color:#F2BE32 !important;
+  border-radius: 5px;
+  font-family: 'Aspira', sans-serif !important;
+  font-size: 18px;
+  line-height: 22px;
+  padding-left: 25px;
+  padding-right: 24px;
+  min-width: 130px;
+  margin-right: 30px;
 }
