--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -1,19 +1,27 @@
-.navbar-light .navbar-brand{
-  color: #00568C !important;
+.navbar-light .navbar-brand {
+  color: #00568c !important;
   font-weight: 800;
-  font-family: 'Muli', sans-serif !important;
+  font-family: "Muli", sans-serif !important;
 }
 
-.navbar{
-  background-color:transparent ;
+.navbar {
+  background-color: transparent;
 }
 
-.nav-link{
+.nav-link {
   font-weight: 600;
-  font-family: 'Muli', sans-serif !important;
-  color: #00568C !important;
+  font-family: "Muli", sans-serif !important;
+  color: #00568c !important;
 }
 
-.nav-link:hover{
-  color: #F2BE32 !important;
+.nav-link:hover {
+  color: #f2be32 !important;
+}
+
+.donation-link {
+  color: #f2be32 !important;
+}
+
+.donation-link:hover {
+  opacity: 0.6;
 }
