changes to verification and match emails

--- a/server/templates/match.html
+++ b/server/templates/match.html
@@ -39,7 +39,11 @@ If you choose to accept this mentorship pairing, <b> please go to your profile p
             Frequency of the sessions</li>
     </ul>
 
+    If you'd like to join our mentor Slack community to bounce off ideas and advice with other mentors working with students in the same grade level range, please join our Slack Workspace here (and add yourself to the channels based on your student's grade level: #mentors-gradek-5, #mentors-grade6-8, #mentors-grade9-12):
 
+    <a href="https://join.slack.com/t/coved2020/shared_invite/zt-eufzfl68-7pOSBGZUorZiZTWytHY~_Q">https://join.slack.com/t/coved2020/shared_invite/zt-eufzfl68-7pOSBGZUorZiZTWytHY~_Q</a>
+
+    <br /><br />
     Moving forward, if you have any questions, please email covedmentors@gmail.com.
 
     Thank you again, and we are excited to hear about how the mentorship goes!
