--- a/server/templates/verification.html
+++ b/server/templates/verification.html
@@ -12,8 +12,11 @@
         Hello,
         <br/>
         <br/>
-        The mentor you requested help from has been notified and will be in contact with you shortly.
+        The mentor you requested, {{mentorfirst}}, has been notified and will be in contact with you shortly.
         If you don't hear a response within 48 hours, please request another mentor.
+        <br />
+        <br />
+        If this is your third time requesting a mentor and have not received a response from your prior mentors - please fill out <a href="https://forms.gle/z5GxEUoyWzfyceHu9"> this form </a> and we will directly match you.
         <br />
         <br/>
         Best wishes,
