--- a/server/templates/verification.html
+++ b/server/templates/verification.html
@@ -12,7 +12,7 @@
         Hello,
         <br/>
         <br/>
-        The mentor you requested, {{mentorfirst}}, has been notified and will be in contact with you shortly.
+        The mentor you requested, {{mentorFirst}}, has been notified and will be in contact with you shortly.
         If you don't hear a response within 48 hours, please request another mentor.
         <br />
         <br />
