--- a/server/templates/reminder.html
+++ b/server/templates/reminder.html
@@ -19,6 +19,18 @@
         contact us at coveducation@gmail.com. We will terminate your account and delete any information that you provided during
         the registration process. Please note that, without parental consent, you and your child will be unable to use the
         services provided by CovEd.
+
+        To request a mentor, please log in to your profile and navigate to the "Find a Mentor" page, where you will be able to filter by subject, grade level, and any specific tags. For more instructions, please visit the following links:
+
+        English: bit.ly/covedenglish
+        Arabic: bit.ly/covedarabic
+        French: bit.ly/covedfrench
+        Korean: bit.ly/covedkorean
+        Mandarin: bit.ly/covedmandarin
+        Portuguese: bit.ly/covedportuguese
+        Spanish: bit.ly/covedspanish
+        Vietnamese: bit.ly/covedvietnamese
+
         Best wishes,
         <br />
         Thank you, and hope you enjoy CovEd!
